--- a/scss/components/_soe_dm_navigation.scss
+++ b/scss/components/_soe_dm_navigation.scss
@@ -67,12 +67,21 @@
         width: 100%;
       }
 
+      @include breakpoint-max(smaller) {
+        padding-top: 10px;
+      }
+
       h2 {
         margin-bottom: 0;
         padding-bottom: 20px;
 
         @include breakpoint-max(small) {
           float: left;
+        }
+
+        @include breakpoint-max(smaller) {
+          font-size: 22px;
+          padding-bottom: 10px;
         }
 
         a {
@@ -173,6 +182,11 @@
     }
 
     .block-stanford-search-api {
+
+      @include breakpoint-max(small) {
+        margin-top: -10px;
+      }
+
       .form-item-keywords {
         margin-top: 1.1em;
 
